<resources>
    <string name="app_name">GraphSSP</string>
    <string name="reset">Reset</string>
    <string name="add_node">Add Node</string>
    <string name="add_path">Add Path</string>
    <string name="edit">Edit</string>
    <string name="settings">Settings</string>
    <string name="reset_toast">The graph has been reset</string>
    <string name="add_node_toast">You can add a node</string>
    <string name="add_path_toast">You can add a path</string>
    <string name="edit_toast">Edit Mode</string>
    <string name="delete_node">Delete</string>
    <string name="edit_label__node">Edit Label</string>
    <string name="edit_size_node">Edit Size</string>
    <string name="edit_color_node">Edit Color</string>
    <string name="color_red">Red</string>
    <string name="color_green">Green</string>
    <string name="color_blue">Blue</string>
    <string name="color_orange">Orange</string>
    <string name="color_cyan">Cyan</string>
    <string name="color_magenta">Magenta</string>
    <string name="color_black">Black</string>
    <string name="move">Move Node</string>
    <string name="move_node_toast">You can move nodes</string>
    <string name="alertCreationNode">Create a new node</string>
    <string name="alertCreationNodeMessage">Enter the node label</string>
    <string name="alertCreationNodeAdd">Add</string>
    <string name="alertEditLabelNode">Change the node label</string>
    <string name="alertEditLabelArc">Change the path label</string>
    <string name="alertEditLabelNodeMessage">Enter the new node label</string>
    <string name="alertEditLabelArcMessage">Enter the new arc label</string>
    <string name="alertEditLabelNodeChange">Change</string>
    <string name="alertEditLabelArcChange">Change</string>
    <string name="alertEditSizeNode">Enter the new size</string>
    <string name="alertEditSizeArc">Enter the new size</string>
    <string name="alertEditSizeNodeEdit">Edit</string>
    <string name="alertEditSizeArcEdit">Edit</string>
    <string name="delete_arc">Delete</string>
    <string name="edit_label__arc">Edit Label</string>
    <string name="edit_size_arc">Edit Size</string>
    <string name="sendMail">Send Mail</string>
    <string name="edit_color_arc">Edit Color</string>
    <string name="color_arc_red">Red</string>
    <string name="color_arc_green">Green</string>
    <string name="color_arc_blue">Blue</string>
    <string name="color_arc_orange">Orange</string>
    <string name="color_arc_cyan">Cyan</string>
    <string name="color_arc_magenta">Magenta</string>
    <string name="color_arc_black">Black</string>
    <string name="graph">Graph</string>
    <string name="save_graph">Save Graph</string>
    <string name="list_graph">List of Graph</string>
</resources>