<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/reset"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/reset" />
    <item
        android:id="@+id/addNode"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/add_node" />
    <item
        android:id="@+id/addPath"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/add_path" />
    <item
        android:id="@+id/move"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/move" />
    <item
        android:id="@+id/edit"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/edit" />
    <item
        android:id="@+id/settings"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/settings" />
</menu>